<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_publications" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/nav_add_publication" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/nav_locations" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/logout"
            android:title="@string/nav_logout" />
    </group>
</menu>