<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEstablishmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_establishment_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/add_establishment"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/add_establishment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_establishment_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/add_establishment_punctuation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_establishment_punctuation"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

        </LinearLayout>

        <fragment
            android:id="@+id/add_establishment_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_establishment_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onPressSubmit"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/add_establishment_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>