<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPublicationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_publication_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/add_publication"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="34sp" />

        <ListView
            android:id="@+id/add_publication_product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_publication_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_price" />

            <EditText
                android:id="@+id/add_publication_punctuation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/add_publication_punctuation"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/add_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="onPressAddProduct"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/add_publication_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/add_publication_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>